--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "axios": "^0.26.1",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
+    "react-loading-skeleton": "^3.1.0",
     "react-scripts": "5.0.1",
     "unsplash-js": "^7.0.15",
     "web-vitals": "^2.1.4"
